--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
   "expo": {
-    "name": "egg-clicker-live",
-    "slug": "snack-556f517e-c9c3-4557-9fa9-c93ed199a8e8",
+    "name": "egg-clicker",
+    "slug": "8b12de1c-860d-4e01-9abd-7c0f0df8b628",
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
